src/test/ui/coherence/coherence-pair-covered-uncovered.re.stderr
error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/coherence-pair-covered-uncovered.rs:11:1
   |
LL | impl<T,U> Remote for Pair<T,Local<U>> { }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ impl doesn't use types inside crate
   |
   = note: the impl does not reference only types defined in this crate
   = note: define and implement a trait or new type instead

error: aborting due to previous error

For more information about this error, try `rustc --explain E0117`.
